unpackaged/main/default/objects/STU__c/STU__c.object-meta.xml
<CustomObject>
    <label>STU</label>
    <nameField>
        <label>STUDENT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STUS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>