unpackaged/main/default/objects/STU__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>E_mail</label>
    <type>Email</type>
</CustomField>