unpackaged/main/default/objects/STU__c/fields/S_Name__c.field-meta.xml
<CustomField>
    <fullName>S_Name__c</fullName>
    <label>S_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>